--- a/src/_includes/navs/forms.njk
+++ b/src/_includes/navs/forms.njk
@@ -1,6 +1,6 @@
 {% set navPages = collections.forms | eleventyNavigation %}
-<h2 class="fu-text-02 fu-text-transform-uppercase fu-spacing-mb-03 fu-spacing-ml-07 fu-spacing-mr-07">Forms</h2>
-<nav class="[ fc-nav ] [ fu-spacing-mb-07 fu-spacing-ml-06 fu-spacing-mr-06 ]">
+<h2 class="fu-text-02 fu-text-transform-uppercase fu-spacing-ml-03 fu-spacing-mr-03 fu-spacing-mb-03 fu-lg-spacing-ml-07 fu-lg-spacing-mr-07">Forms</h2>
+<nav class="[ fc-nav ] [ fu-spacing-mb-07 fu-lg-spacing-ml-06 fu-lg-spacing-mr-06 ]">
   {% macro renderNavListItem(entry) -%}
   <li>
     <a href="{{ entry.url | url }}" {% if entry.url == page.url %} class="active"{% endif %}>{{ entry.title | safe }}</a>
