--- a/src/assets/scss/_main-layout.scss
+++ b/src/assets/scss/_main-layout.scss
@@ -6,11 +6,13 @@
   grid-area: header;
   position: sticky;
   top: 0;
+  z-index: 1030;
 }
+
 
 .fd-main-layout {
   display: grid;
-  grid-template-rows: auto 1fr;
+  grid-template-rows: auto auto minmax(0, 1fr);
   grid-template-areas: 
     "header"
     "sidebar"
@@ -18,7 +20,7 @@
   min-height: 100vh;
 }
 
-@media (min-width: 36em) {
+@media (min-width: 992px) {
   .fd-main-layout {
     grid-template-columns: var(--sidebar-width) 1fr;
     grid-template-rows: var(--header-height) auto;
