feat: add select multiple and size styles

--- a/src/components/css/form-select.css
+++ b/src/components/css/form-select.css
@@ -28,8 +28,11 @@
 .fc-form select::-ms-expand {
   opacity: 0;
 }
-.fc-form select[multiple] {
+.fc-form select[multiple],
+.fc-form select[size]:not([size="1"]) {
   height: auto;
+  background: none;
+  padding-right: var(--spacing-04);
 }
 .fc-form select:focus,
 .fc-form select:active {
