feat: add styles package

--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -16,9 +16,9 @@
     <meta name="theme-color" content="#54e4e5">
     <!-- component css START -->
     {% set css %}
-    {% include "../css/ficus-globals.css" %}
-    {% include "../css/ficus-utilities.css" %}
-    {% include "../css/ficus-docs.css" %}
+    {% include "../../node_modules/@ficusjs/styles/dist/css/ficus-globals.css" %}
+    {% include "../../node_modules/@ficusjs/styles/dist/css/ficus-utilities.css" %}
+    {% include "../../tmp/css/ficus-docs.css" %}
     {% include "../components/css/navbar.css" %}
     {% include "../components/css/navigation.css" %}
     {% include "../components/css/button.css" %}
