--- a/src/components/css/navbar.css
+++ b/src/components/css/navbar.css
@@ -1,6 +1,5 @@
 :root {
-  --header-height: 75px;
-  --header-padding: var(--spacing-07)
+  --header-height: 80px;
 }
 
 .fc-navbar {
@@ -8,8 +7,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  height: var(--header-height);
-  padding: 0 var(--header-padding);
+  height: 100%;
+  padding: 0 var(--spacing-07);
   background: var(--ui-elevation-background-01);
   border-bottom: 1px solid var(--ui-border-02);
 }
@@ -17,7 +16,8 @@
 .fc-navbar__section {
   align-items: center;
   display: flex;
-  /* flex: 1 0 0; */
+  min-height: var(--header-height);
+  height: 100%;
 }
 
 .fc-navbar__section:not(:first-child):last-child {
@@ -37,3 +37,61 @@
   padding: 0;
   list-style: none;
 }
+
+.fc-navbar__toggler {
+  display: flex;
+  align-content: center;
+  align-self: center;
+  border: none;
+  padding: var(--spacing-03);
+  background: none;
+}
+
+.fc-navbar__toggler svg {
+  width: 24px;
+  height: 24px;
+  fill: var(--high-emphasis-text-color);
+}
+
+@media (min-width: 992px) {
+  .fc-navbar__toggler {
+    display: none;
+  }
+}
+
+.fc-navbar__toggler-icon {
+  display: inline-block;
+  width: 1.5em;
+  height: 1.5em;
+  vertical-align: middle;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+@media (min-width: 992px) {
+  .fc-navbar__section[slot="collapseSection"] {
+    display: flex;
+    align-items: center;
+  }
+
+  .fc-navbar__toggler-wrapper {
+    display: none;
+  }
+}
+
+@media (max-width: 991px) {
+  .fc-navbar__section[slot="collapseSection"] {
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+  }
+  .fc-navbar__section[slot="collapseSection"]:not(.fc-navbar__section--open) {
+    display: none;
+  }
+  .fc-navbar__toggler-wrapper {
+    display: flex;
+  }
+}
+
