--- a/src/scss/ficus-docs.scss
+++ b/src/scss/ficus-docs.scss
@@ -4,8 +4,8 @@
 // 
 
 // Ficus globals
-@import '../../scss/functions';
-@import '../../scss/settings';
+@import '../../node_modules/@ficusjs/styles/src/scss/_functions.scss';
+@import '../../node_modules/@ficusjs/styles/src/scss/_settings.scss';
 
 // Documentation components
 @import 'main-layout';
