--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -19,9 +19,9 @@
     {% include "../../node_modules/@ficusjs/styles/dist/css/ficus-globals.css" %}
     {% include "../../node_modules/@ficusjs/styles/dist/css/ficus-utilities.css" %}
     {% include "../../tmp/css/ficus-docs.css" %}
-    {% include "../components/css/navbar.css" %}
-    {% include "../components/css/navigation.css" %}
-    {% include "../components/css/button.css" %}
+    {% include "../../tmp/components/html/navbar/navbar.css" %}
+    {% include "../../tmp/components/html/navigation/navigation.css" %}
+    {% include "../../tmp/components/html/button/button.css" %}
     {% endset %}
     <style>
       {{css | safe}}
