feat: add sass modules to form components

--- a/src/components/custom-elements/form-label/form-label.scss
+++ b/src/components/custom-elements/form-label/form-label.scss
@@ -1,24 +1,1 @@
-.fc-form__label {
-  display: inline-block;
-  margin-bottom: var(--spacing-02);
-  font-weight: 600;
-}
-.fc-form__label.fc-form__label--block {
-  display: block;
-}
-/* reverse label */
-.fc-form__input--reverse .fc-form__label {
-  margin-bottom: 0;
-  margin-left: var(--spacing-03);
-}
-fc-form-label[required] label.fc-form__label::after {
-  content: "*";
-  color: var(--state-required);
-  margin-left: var(--spacing-02);
-}
-label[for] {
-  cursor: pointer;
-}
-.fc-form__label:empty {
-  display: none;
-}
+@use 'main'
