feat: add tab styles

--- a/src/components/custom-elements/tabs/tabs.scss
+++ b/src/components/custom-elements/tabs/tabs.scss
@@ -1,26 +1,1 @@
-.fc-tabs input[type=radio],
-.fc-tabs__pane {
-  display: none;
-}
-
-.fc-tabs__tabs {
-  display: flex;
-  display: flex;
-  flex-wrap: wrap;
-  padding-left: 0;
-  margin-bottom: 0;
-  border-bottom: 1px solid #dee2e6;
-  list-style: none;
-}
-
-.fc-tabs__tabs li {
-  margin-bottom: -1px;
-}
-
-.fc-tabs__tabs li label {
-  display: block;
-  padding: .5rem 1rem;
-  border-top-left-radius: .25rem;
-  border-top-right-radius: .25rem;
-  border: 1px solid transparent;
-}
+@use 'main'
