--- a/src/components/html/form-label/_mixins.scss
+++ b/src/components/html/form-label/_mixins.scss
@@ -7,14 +7,14 @@
   .fc-form__label.fc-form__label--block {
     display: block;
   }
-  .fc-form__input--reverse .fc-form__label {
-    margin-bottom: 0;
-    margin-left: var(--spacing-03);
-  }
-  fc-form-label[required] label.fc-form__label::after {
+  .fc-form__label.fc-form__label--required::after {
     content: "*";
     color: var(--state-required);
     margin-left: var(--spacing-02);
+  }
+  .fc-form__input--reverse .fc-form__label {
+    margin-bottom: 0;
+    margin-left: var(--spacing-03);
   }
   label[for] {
     cursor: pointer;
