--- a/src/components/custom-elements/form-select/_main.scss
+++ b/src/components/custom-elements/form-select/_main.scss
@@ -16,7 +16,10 @@
   width: 100%;
   max-width: 100%;
   background-color: var(--fc-form-select-color-background, var(--ui-background-01));
+  /* light theme image */
   background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAUCAMAAACzvE1FAAAADFBMVEUzMzMzMzMzMzMzMzMKAG/3AAAAA3RSTlMAf4C/aSLHAAAAPElEQVR42q3NMQ4AIAgEQTn//2cLdRKppSGzBYwzVXvznNWs8C58CiussPJj8h6NwgorrKRdTvuV9v16Afn0AYFOB7aYAAAAAElFTkSuQmCC");
+  /* dark theme image */
+  background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAUAgMAAAD5DFXkAAAACVBMVEUAAADLy8vMzMyq7c6HAAAAAnRSTlMAgJsrThgAAAA9SURBVAjXZYw5FQAwDELpEhFREz1RExFZisryWMvAwPGBUwBiZLmyvorIQpCDJBdNKvzlwhOPfTPAKEONfyDYFUEhnDrUAAAAAElFTkSuQmCC");
   background-repeat: no-repeat;
   background-position-x: calc(100% - 1rem);
   background-position-y: center;
