feat: add custom elements to export map

--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -36,13 +36,13 @@
 
       <header class="fc-navbar">
         <section class="fc-navbar__section">
-          <img id="ficus-logo" src="../assets/img/ficus-logo.svg" width="150" alt="FicusJS Components">
-          <img id="ficus-logo-white" src="../assets/img/ficus-logo-white.svg" width="150" alt="FicusJS Components" style="display: none;">
+          <a href="/"><img id="ficus-logo" src="../assets/img/ficus-logo.svg" width="150" alt="FicusJS Components"></a>
+          <a href="/"><img id="ficus-logo-white" src="../assets/img/ficus-logo-white.svg" width="150" alt="FicusJS Components" style="display: none;"></a>
         </section>
         <section class="fc-navbar__section">
           <nav class="fc-navbar__nav">
             <ul>
-              <li><a href="..." class="fc-button fc-button--link">GitHub</a></li>
+              <li><a href="https://github.com/ficusjs/ficusjs-components" class="fc-button fc-button--link" target="_blank" rel="noreferrer noopener">GitHub</a></li>
               <li>{% include "theme-toggle.njk" %}</li>
             </ul>
           </nav>
