--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -19,14 +19,19 @@
     {% include "../../node_modules/@ficusjs/styles/dist/css/ficus-globals.css" %}
     {% include "../../node_modules/@ficusjs/styles/dist/css/ficus-utilities.css" %}
     {% include "../../node_modules/@ficusjs/styles/dist/css/ficus-docs.css" %}
-    {% include "../../tmp/components/html/navbar/navbar.css" %}
+    {% include "../../tmp/components/custom-elements/dropdown/dropdown.css" %}
+    {% include "../../tmp/components/custom-elements/navbar/navbar.css" %}
     {% include "../../tmp/components/html/navigation/navigation.css" %}
     {% include "../../tmp/components/html/button/button.css" %}
     {% endset %}
     {% if project.environment == "production" %}
-      <style>{{ css | cssmin | safe }}</style>
+      <style>
+        {{css | cssmin | safe}}
+      </style>
     {% else %}
-      <style>{{ css | safe }}</style>
+      <style>
+        {{css | safe}}
+      </style>
     {% endif %}
     <!-- component css END -->
     {% cssPath cssFile | safe %}
@@ -40,22 +45,26 @@
             <path d="M 5.5 9 A 1.50015 1.50015 0 1 0 5.5 12 L 42.5 12 A 1.50015 1.50015 0 1 0 42.5 9 L 5.5 9 z M 5.5 22.5 A 1.50015 1.50015 0 1 0 5.5 25.5 L 42.5 25.5 A 1.50015 1.50015 0 1 0 42.5 22.5 L 5.5 22.5 z M 5.5 36 A 1.50015 1.50015 0 1 0 5.5 39 L 42.5 39 A 1.50015 1.50015 0 1 0 42.5 36 L 5.5 36 z"/>
           </symbol>
         </svg>
-        <section>
-          <nav>
-            <img id="ficus-logo" src="../assets/img/ficus-logo.svg" width="150" alt="FicusJS Components">
-            <img id="ficus-logo-white" src="../assets/img/ficus-logo-white.svg" width="150" alt="FicusJS Components" style="display: none;">
-          </nav>
-        </section>
+        <nav>
+          <img id="ficus-logo" src="../assets/img/ficus-logo.svg" height="32" alt="FicusJS Components">
+          <img id="ficus-logo-white" src="../assets/img/ficus-logo-white.svg" height="32" alt="FicusJS Components" style="display: none;">
+        </nav>
+
         <button type="button" class="fc-navbar__toggler">
-          <svg><use xlink:href="#menu" href="#menu"></use></svg>
+          <svg>
+            <use xlink:href="#menu" href="#menu"></use>
+          </svg>
         </button>
-        <section class="fc-navbar__collapse">
-          <nav>
-            <a href="..." class="fc-button fc-button--link">Docs</a>
-            <a href="..." class="fc-button fc-button--link">GitHub</a>
-            {% include "theme-toggle.njk" %}
-          </nav>
-        </section>
+
+        <nav class="fc-navbar__collapse">
+          <fc-dropdown button-class="fc-navbar__link" dropdown-title="Docs">
+            <a href="...">Docs 1</a>
+            <a href="...">Docs 2</a>
+            <a href="...">Docs 3</a>
+            <a href="...">Docs 4</a>
+          </fc-dropdown>
+          <a href="..." class="fc-navbar__link">GitHub</a>
+        </nav>
       </fc-navbar>
 
       <div class="[ fd-sidebar ] [ fu-spacing-pt-05 fu-spacing-pb-05 fu-spacing-pl-05 fu-spacing-pr-05 fu-lg-spacing-pt-09 fu-lg-spacing-pb-09 fu-lg-spacing-pl-00 fu-lg-spacing-pr-00 ]">
@@ -84,9 +93,13 @@
         {% endif %} #}
       </main>
 
+      <footer>
+        {% include "theme-toggle.njk" %}
+      </footer>
+
     </div>
     <script type="module" src="assets/js/sidebar-details.js"></script>
     <script type="module" src="assets/js/theme.js"></script>
-    <script type="module" src="assets/js/main.js"></script> 
+    <script type="module" src="assets/js/main.js"></script>
   </body>
 </html>
