--- a/src/components/custom-elements/dropdown/dropdown.scss
+++ b/src/components/custom-elements/dropdown/dropdown.scss
@@ -37,13 +37,26 @@
     margin: var(--fc-dropdown-menu-spacing-margin, calc(var(--spacing-03) / 2) 0 0);
     text-align: left;
     list-style: none;
-    background-color: var(--fc-dropdown-menu-color-background, var(--ui-elevation-background-03));
+    background-color: var(--fc-dropdown-menu-color-background, var(--ui-elevation-background-02));
     background-clip: padding-box;
-    border: 1px solid var(--fc-dropdown-menu-color-border, var(--ui-border-04));
+    border: 1px solid var(--fc-dropdown-menu-color-border, var(--ui-border-03));
     border-radius: .25rem;
   
     /* CHANGE */
-    box-shadow: var(--fc-dropdown-menu-shadow, var(--ui-elevation-shadow-03));
+    box-shadow: var(--fc-dropdown-menu-shadow, var(--ui-elevation-shadow-02));
+
+    button:not([class]),
+    a:not([class]) {
+      display: flex;
+      align-items: center;
+      width: 100%;
+      border: none;
+      padding: var(--fc-dropdown-menu-link-spacing-padding-y, var(--spacing-03)) var(--fc-dropdown-menu-link-spacing-padding-x, var(--spacing-05));
+      background-color: transparent;
+      color: var(--ui-color);
+      text-decoration: none;
+      cursor: pointer;
+    }
   }
   
   .fc-dropdown__menu--open {
