feat: add accordion toggle icon and API docs

--- a/src/components/custom-elements/accordion/accordion.scss
+++ b/src/components/custom-elements/accordion/accordion.scss
@@ -1,14 +1,1 @@
-@use '../../html/accordion' as accordion;
-
-fc-accordion {
-  display: block;
-  width: 100%;
-
-  .fc-accordion {
-    border-top: 1px solid var(--ui-border-04);
-
-    &:first-child {
-      border-top: none;
-    }
-  }
-}
+@use 'main';
