--- a/src/components/html/accordion/_main.scss
+++ b/src/components/html/accordion/_main.scss
@@ -1,22 +1,41 @@
+//
+// Accordion (HTML)
+//
+
 .fc-accordion {
   display: block;
   width: 100%;
-  padding: var(--spacing-05);
+  padding: var(--fc-accordion-details-spacing, var(--spacing-05));
 
-  .fc-accordion__header {
-    display: block;
-    margin: calc(var(--spacing-05) * -1);
-    padding: var(--spacing-05);
+  summary {
+    display: flex;
+    align-items: center;
+    margin: calc(var(--fc-accordion-summary-spacing, var(--spacing-05)) * -1);
+    padding: var(--fc-accordion-summary-spacing, var(--spacing-05));
     cursor: pointer;
-  
+
+    .fc-accordion_toggle-icon {
+      width: var(--fc-accordion-svg-sizing, var(--icon-02));
+      height: var(--fc-accordion-svg-sizing, var(--icon-02));
+      margin-right: var(--fc-accordion-svg-spacing, var(--spacing-03));
+    }
+
     &:focus {
       outline: none;
+      text-decoration: underline;
+      text-decoration-color: var(--fc-accordion-summary-text-decoration-color-focus, var(--secondary-color));
+      text-decoration-thickness: var(--fc-accordion-summary-text-decoration-thickness-focus, var(--spacing-01));
+      text-underline-offset: var(--fc-accordion-summary-text-underline-offset-focus, var(--spacing-02));
     }
   }
 
   &[open] {
-    .fc-accordion__header {
+    summary {
       margin-bottom: 0;
+
+      .fc-accordion_toggle-icon {
+        transform: rotate(90deg);
+      }
     }
   }
 
