feat: update ficus styles

--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -93,7 +93,7 @@
         {% endif %} #}
       </main>
 
-      <footer>
+      <footer class="[ fd-footer ]">
         {% include "console.njk" %}
         {% include "theme-toggle.njk" %}
       </footer>
