--- a/src/components/html/navbar/_main.scss
+++ b/src/components/html/navbar/_main.scss
@@ -11,6 +11,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  min-height: var(--navbar-height);
   padding: var(--spacing-05);
   background: var(--ui-elevation-background-01);
   border-bottom: 1px solid var(--ui-border-02);
