--- a/src/components/html/navbar/_main.scss
+++ b/src/components/html/navbar/_main.scss
@@ -15,6 +15,7 @@
   padding: var(--spacing-05);
   background: var(--ui-elevation-background-01);
   border-bottom: 1px solid var(--ui-border-02);
+  z-index: 4;
 
   @media (min-width: 992px) {
     padding: var(--spacing-05) var(--spacing-07);
