feat: move theme toggle switch

--- a/src/_includes/theme-toggle.njk
+++ b/src/_includes/theme-toggle.njk
@@ -1,4 +1,4 @@
-<div class="fd-theme-toggle">
+<div class="fd-theme-toggle" style="margin-left: auto;">
   <input type="checkbox" name="theme-toggle" id="theme-toggle">
   <label for="theme-toggle">
     <div class="fd-theme-toggle__inner">
